--- a/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
+++ b/src/app/pages/user/components/user-sidebar/user-sidebar.component.html
@@ -117,7 +117,7 @@
                 <div class="menu drop-menu">
                     <div class="channel_my">
                         <div class="profile_link">
-                            <!-- <img src="assets/images/hd_dp.jpg" alt=""> -->
+                            <img src="assets/images/hd_dp.jpg" alt="">
                             <div class="pd_content">
                                 <div class="rhte85">
                                     <h6>{{getName() || ""}}</h6>
@@ -128,7 +128,7 @@
                                 <span>{{getEmail() || ""}}</span>
                             </div>
                         </div>
-                        <!-- <a href="my_instructor_profile_view.html" class="dp_link_12">View Instructor Profile</a> -->
+                        <a [routerLink]="['Profile']"  class="dp_link_12">View My Profile</a>
                     </div>
                     <!-- <div class="night_mode_switch__btn">
                         <a href="#" id="night-mode" class="btn-night-mode">
@@ -168,6 +168,18 @@
                   <a [routerLink]="['myCourses']" routerLinkActive="active"  class="menu--link" data-toggle="collapse" title="My Courses">
                       <i class="uil uil-heart-alt menu--icon"></i>
                       <span class="menu--label">{{"My Courses" | translate}}</span>
+                  </a>
+              </li>
+                            <li class="menu--item" (click)="close()">
+                  <a [routerLink]="['PurchaseHistory']" routerLinkActive="active"  class="menu--link" data-toggle="collapse" title="PurchaseHistory">
+                    <i class="uil uil-file-alt menu--icon"></i>
+                      <span class="menu--label">{{"purchase history" | translate}}</span>
+                  </a>
+              </li>
+                            <li class="menu--item" (click)="close()">
+                  <a [routerLink]="['userFeedback']" routerLinkActive="active"  class="menu--link" data-toggle="collapse" title="userFeedback">
+                    <i class="uil uil-comment-alt-exclamation menu--icon"></i>
+                      <span class="menu--label">{{"Send Feedback" | translate}}</span>
                   </a>
               </li>
             <!--   <li class="menu--item  menu--item__has_sub_menu">
@@ -332,7 +344,22 @@
                         <span class="menu--label">{{"My Courses" | translate}}</span>
                     </a>
                 </li>
-              <!--   <li class="menu--item  menu--item__has_sub_menu">
+                <li class="menu--item">
+                  <a [routerLink]="['PurchaseHistory']" routerLinkActive="active"  class="menu--link" data-toggle="collapse" title="PurchaseHistory">
+                    <i class="uil uil-file-alt menu--icon"></i>
+                      <span class="menu--label">{{"purchase history" | translate}}</span>
+                  </a>
+                </li>
+                <li class="menu--item">
+                  <a [routerLink]="['userFeedback']" routerLinkActive="active"  class="menu--link" data-toggle="collapse" title="userFeedback">
+                    <i class="uil uil-comment-alt-exclamation menu--icon"></i>
+                      <span class="menu--label">{{"Send Feedback" | translate}}</span>
+                  </a>
+                </li>
+
+
+
+                        <!--   <li class="menu--item  menu--item__has_sub_menu">
                     <label class="menu--link" title="Pages">
                         <i class='uil uil-file menu--icon'></i>
                         <span class="menu--label">Pages</span>
