--- a/src/assets/css/style.css
+++ b/src/assets/css/style.css
@@ -35250,6 +35250,9 @@ font-weight: 700;
 .contentList{
   /* background: #ffffff; */
 }
+.studentContentList{
+  background: transparent;
+}
 .contentList div .card .card-header{
   padding: 0px;
 }
@@ -35569,6 +35572,14 @@ span.chapterName{
     height: 170% !important;
     /* height: 105.4% !important; */
 }
+.subvideo.chapter-list {
+    position: absolute !important;
+    height: 120% !important;
+    /* height: 105.4% !important; */
+}
+
+
+
 }
 @media (max-width: 992px){
   .rtl .morebuttn.minify
@@ -36379,16 +36390,24 @@ scroll
     -o-border-radius: 50%;
 }
 .chapter-list .left_section ul.sub_menu li:after{
-  content: "";
+    content: "";
     display: block;
     position: absolute;
-    left: 16px;
+    /* left: 16px; */
     height: 6px;
+    left: 28px;
     width: 6px;
     background: #000;
     border-radius: 50%;
     margin: -31px -9px;
     z-index: 25;
+    -webkit-border-radius: 50%;
+    -moz-border-radius: 50%;
+    -ms-border-radius: 50%;
+    -o-border-radius: 50%;
+}
+.chapter-list .sub_menu--link {
+  padding: 20px 35px;
 }
 .rtl .course-content .contentList .card-body li:after
  {
@@ -36425,7 +36444,7 @@ scroll
     display: block;
     position: absolute;
     left: auto;
-    right: 16px;
+    right: 28px;
     height: 6px;
     width: 6px;
     background: #000;
